# sofre

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE_deps
cmake/: Dependencies.cmake
examples/: 01_helloWindow.cpp  02_VertexAttribAndUniform.cpp  02_vertexAttribAndUniform.cpp  03_cam2D.cpp  03_transform.cpp  04_rotatingCube.cpp  05_textureCube.cpp  06_manyCubes.cpp  CMakeLists.txt  backgroundColorChange.cpp  example_config.hpp.in  helloWindow.cpp  helloWindow_sgi.cpp  transform.cpp
include/sofre/: camera.hpp  debug.hpp  engine.hpp  enums.hpp  log.hpp  math.hpp  mesh.hpp  object.hpp  program.hpp  renderContext.hpp  renderer.hpp  scene.hpp  shader.hpp  sofre.hpp  texture2d.hpp  transform.hpp  window.hpp
src/: camera.cpp  core.hpp  debug.cpp  engine.cpp  enums_func.hpp  enums_impl.hpp  gl_debug.cpp  gl_debug.hpp  log.cpp  mesh.cpp  object.cpp  os_detect.hpp  program.cpp  renderContext.cpp  renderer.cpp  scene.cpp  sgi_impl.cpp  shader.cpp  sofre.cpp  sofre_config.hpp.in  texture2d.cpp  transform.cpp
